apps/base/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: adminer
spec:
  selector:
    app: adminer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
